# Implementation-of-a-Hardware-In-the-Loop-architecture-at-a-miniature-scale-for-an-autonomous-vehicle

./: README.md
MRbot_ws/delay_measurements_data/: measurements Alone_5Hz.ods  measurements Mixed_10Hz.ods  measurements Mixed_5Hz.ods  measurements Mixed_7Hz).ods  measurements_Alone_5Hz.bag  measurements_Mixed_5Hz.bag  measurements_mixed_10Hz.bag  measurements_mixed_7Hz.bag
MRbot_ws/delay_measurements_data/old_measurements/: 2020-06-25-11-50-30.bag  camera_nsecs.csv  camera_secs.csv  camera_time_maxDigits.csv  measurements Mixed 2.ods  measurements_Alone 2.csv  measurements_Alone 2.ods  measurements_Alone 3.ods  measurements_Mixed.csv  rosbag_measurement_alone_3.bag  time_distance.csv  time_sim.csv  time_sim_-p.csv
MRbot_ws/devel/: .catkin  local_setup.sh  setup.sh
MRbot_ws/src/angle_calculation/: CMakeLists.txt  package.xml
MRbot_ws/src/distance_calculation/: CMakeLists.txt
MRbot_ws/src/fiducials-kinetic-devel/: aruco_generator.py
MRbot_ws/src/joy_to_twist/: CMakeLists.txt
MRbot_ws/src/mr_sensor_handler/: CMakeLists.txt  package.xml
MRbot_ws/src/mr_sensor_handler/src/: .sensorHandler.py.swp  read_json.py
MRbot_ws/src/robot_launch/: CMakeLists.txt  package.xml
MRbot_ws/src/ultrasonic_sensor/: CMakeLists.txt
MRbot_ws/src/velocity_control/: CMakeLists.txt
Unity_SURATRAM_project/: .gitignore  LICENSE
Unity_SURATRAM_project/Assets/: Terrain.asset
Unity_SURATRAM_project/Assets/Scripts/: Session.vim  (+2 more)
Unity_SURATRAM_project/ProjectSettings/: ProjectSettings.asset
Unity_SURATRAM_project/documentation/: mainpage.doc  mixedRealitySimulator.doxygen.cfg
(+619 files in other folders)
